--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -18,12 +18,7 @@
             <li><a href="inventory.html">Инвентаризация</a></li>
             <li><a href="personnel.html">Персоналии</a></li>
             <li><a href="setting.html">Настройки</a></li>
-            <li><a href="login.html">Выход</a></li>
-            <li>
-                <button id="theme-toggle" class="theme-toggle">
-                    <span class="theme-icon">🌓</span> Сменить тему
-                </button>
-            </li>
+            <li><a href="#" onclick="logout()">Выход</a></li>
         </ul>
     </nav>
 
@@ -67,6 +62,13 @@
 
 <script src="theme-switcher.js"></script>
 <script>
+    document.addEventListener('DOMContentLoaded', () => {
+    const institutionKey = localStorage.getItem('institutionKey');
+    if (!institutionKey) {
+        window.location.href = 'login.html';
+        return;
+    }
+});
     document.getElementById('register-form').addEventListener('submit', async function(e) {
         e.preventDefault();
 
@@ -123,6 +125,15 @@
             alert(error.message || 'Произошла неизвестная ошибка при регистрации. Пожалуйста, попробуйте еще раз.');
         }
     });
+
+       function logout() {
+    // Очищаем все данные авторизации
+    localStorage.removeItem('institutionKey');
+    localStorage.removeItem('institutionName');
+
+    // Перенаправляем на страницу входа
+    window.location.href = 'login.html';
+}
 </script>
 </body>
 </html>
