--- a/src/main/resources/static/inventory-short.html
+++ b/src/main/resources/static/inventory-short.html
@@ -19,12 +19,8 @@
                 <li><a href="inventory.html">Инвентаризация</a></li>
                 <li><a href="personnel.html">Персоналии</a></li>
 				<li><a href="setting.html">Настройки</a></li>
-				<li> <a href="login.html">Выход</a></li>
-				<li>
-                    <button id="theme-toggle" class="theme-toggle">
-                        <span class="theme-icon">🌓</span> Сменить тему
-                    </button>
-                </li>
+                <li><a href="#" onclick="logout()">Выход</a></li>
+
             </ul>
         </nav>
 		
@@ -122,6 +118,14 @@
     <script src="theme-switcher.js"></script>
 	
     <script>
+        document.addEventListener('DOMContentLoaded', () => {
+    const institutionKey = localStorage.getItem('institutionKey');
+    if (!institutionKey) {
+        window.location.href = 'login.html';
+        return;
+    }
+      });
+
         // Переменные
         const scannedNumbers = new Set();
         const numbersGrid = document.getElementById('numbers-grid');
@@ -351,6 +355,16 @@
         window.addEventListener('load', () => {
             numberInput.focus();
         });
+
+           function logout() {
+    // Очищаем все данные авторизации
+    localStorage.removeItem('institutionKey');
+    localStorage.removeItem('institutionName');
+
+    // Перенаправляем на страницу входа
+    window.location.href = 'login.html';
+}
+
     </script>
 </body>
 </html>
