--- a/src/main/resources/static/print-preview.html
+++ b/src/main/resources/static/print-preview.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Предпросмотр печати - OPAC-Global</title>
-    <link rel="stylesheet" href="styles.css" id="main-style" />
-    <link rel="stylesheet" href="light-styles.css" id="light-theme" disabled />
+    <link rel="stylesheet" href="styles.css" id="main-style"/>
+    <link rel="stylesheet" href="light-styles.css" id="light-theme" disabled/>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
     <style>
         /* Основные стили */
@@ -117,7 +117,7 @@
             <li><a href="inventory.html">Инвентаризация</a></li>
             <li><a href="personnel.html">Персоналии</a></li>
             <li><a href="setting.html">Настройки</a></li>
-            <li><a href="login.html">Выход</a></li>
+            <li><a href="#" onclick="logout()">Выход</a></li>
         </ul>
     </nav>
 
@@ -195,6 +195,15 @@
     function toggleMenu() {
         document.getElementById("sidebar").classList.toggle("collapsed");
     }
+
+       function logout() {
+    // Очищаем все данные авторизации
+    localStorage.removeItem('institutionKey');
+    localStorage.removeItem('institutionName');
+
+    // Перенаправляем на страницу входа
+    window.location.href = 'login.html';
+}
 </script>
 </body>
 </html>
