--- a/src/main/resources/static/print-preview.html
+++ b/src/main/resources/static/print-preview.html
@@ -47,65 +47,83 @@
             overflow: hidden;
         }
 
-        .barcode-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(10, 1fr);
-            width: 100%;
-            height: 100%;
-            padding: 5mm;
-            box-sizing: border-box;
-            gap: 0.5mm;
-        }
+        /* Общие стили */
+.barcode-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    width: 195mm;              /* было 100% */
+    height: 280mm;             /* чуть меньше A4 */
+    padding: 5mm;
+    box-sizing: border-box;
+    gap: 0;
+    margin: 0 auto;
+}
 
-        .barcode-cell {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            border: 1px dashed #ddd;
-            padding: 1mm;
-            position: relative;
-            page-break-inside: avoid;
-            overflow: hidden;
-        }
+.barcode-cell {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px dashed #888;
+    padding: 1mm;
+    box-sizing: border-box;
+    position: relative;
+    page-break-inside: avoid;
+    overflow: hidden;
+}
 
-        .barcode-svg {
-            width: 100%;
-            height: 22mm;
-            margin: 0 auto;
-        }
+.barcode-svg {
+    width: 100%;
+    height: 20mm;
+    margin: 0 auto;
+}
 
-        .barcode-text {
-            margin-top: 1mm;
-            font-size: 9pt;
-            text-align: center;
-            word-break: break-all;
-            line-height: 1.2;
-        }
+.barcode-text {
+    margin-top: 1mm;
+    font-size: 11pt;
+    text-align: center;
+    word-break: break-word;
+    line-height: 1.2;
+}
 
-        /* Стили только для печати */
-        @media print {
-            body {
-                background: white !important;
-                margin: 0 !important;
-                padding: 0 !important;
-            }
+/* Печать */
+@media print {
+    body, html {
+        margin: 0;
+        padding: 0;
+    }
 
-            .container, .sidebar, .menu-button, .header, .print-actions {
-                display: none !important;
-            }
+    .a4-sheet {
+        margin: 0;
+        padding: 0;
+        box-shadow: none;
+        width: 210mm;
+        height: 297mm;
+    }
 
-            .a4-sheet {
-                box-shadow: none !important;
-                margin: 0 !important;
-                page-break-after: always;
-            }
+    .barcode-grid {
+        width: 195mm !important;
+        height: 280mm !important;
+        padding: 5mm;
+        gap: 0 !important;
+    }
 
-            .barcode-cell {
-                border: 1px solid #eee !important;
-            }
-        }
+    .barcode-cell {
+        border: 1px dashed black !important;
+        padding: 1mm;
+    }
+
+    .barcode-svg {
+        height: 20mm !important;
+        width: 100% !important;
+    }
+
+    .barcode-text {
+        font-size: 12pt !important;
+    }
+}
+}
     </style>
 </head>
 <body>
@@ -142,67 +160,102 @@
     </main>
 </div>
 
+<script src="theme-switcher.js"></script>
 <script>
-    if (!localStorage.getItem('institutionKey')) {
-        window.location.href = 'login.html';
-    }
-
-    function generateBarcodeSVG(text) {
-        const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-        JsBarcode(svg, text, {
-            format: "CODE128",
-            displayValue: false,
-            fontSize: 0, // Скрываем текст под штрих-кодом
-            height: 22, // Увеличиваем высоту штрих-кода
-            width: 0.7, // Уменьшаем толщину штрихов для плотного размещения
-            margin: 0
-        });
-        svg.classList.add('barcode-svg');
-        return svg;
-    }
-
-    function printBarcodes() {
-        window.print();
-    }
 
     document.addEventListener('DOMContentLoaded', () => {
-        const params = new URLSearchParams(window.location.search);
-        const numbersJson = params.get('numbers');
-        const grid = document.getElementById('barcode-grid');
+          const theme = localStorage.getItem('theme');
+          if (theme === 'light') {
+              document.getElementById('light-theme').disabled = false;
+              document.getElementById('main-style').disabled = true;
+          }
+      });
 
-        if (!numbersJson) return;
 
-        const numbers = JSON.parse(decodeURIComponent(numbersJson));
+  if (!localStorage.getItem('institutionKey')) {
+      window.location.href = 'login.html';
+  }
 
-        // Заполняем 40 ячеек (4x10)
-        for (let i = 0; i < 40; i++) {
-            const cell = document.createElement('div');
-            cell.className = 'barcode-cell';
+  function generateBarcodeSVG(text) {
+    const ns = "http://www.w3.org/2000/svg";
+    const svg = document.createElementNS(ns, "svg");
 
-            const num = numbers[i] || ''; // Если кодов меньше 40, оставшиеся будут пустыми
-            const svg = num ? generateBarcodeSVG(num) : document.createElement('div');
+    // Добавляем фоновый прямоугольник для четкости
+    const rect = document.createElementNS(ns, "rect");
+    rect.setAttribute("width", "100%");
+    rect.setAttribute("height", "100%");
+    rect.setAttribute("fill", "white");
+    svg.appendChild(rect);
 
-            const text = document.createElement('div');
-            text.className = 'barcode-text';
-            text.textContent = num;
-
-            cell.appendChild(svg);
-            cell.appendChild(text);
-            grid.appendChild(cell);
-        }
+    JsBarcode(svg, text, {
+        format: "CODE128",
+        displayValue: false,
+        height: 40,
+        width: 1.5,
+        margin: 0,
+        background: "white" // Белый фон для печати
     });
 
-    function toggleMenu() {
-        document.getElementById("sidebar").classList.toggle("collapsed");
-    }
+    return svg;
+}
 
-       function logout() {
-    // Очищаем все данные авторизации
-    localStorage.removeItem('institutionKey');
-    localStorage.removeItem('institutionName');
+function printBarcodes() {
+    const printWindow = window.open('', '_blank');
+    printWindow.document.write(`
+        <html>
+            <head>
+                <title>Печать штрих-кодов</title>
+                <style>
+                    ${document.querySelector('style').innerHTML}
+                    .a4-sheet { margin: 0; box-shadow: none; }
+                </style>
+            </head>
+            <body>${document.getElementById('barcode-grid').outerHTML}</body>
+        </html>
+    `);
+    printWindow.document.close();
+    printWindow.print();
+}
 
-    // Перенаправляем на страницу входа
-    window.location.href = 'login.html';
+
+  document.addEventListener('DOMContentLoaded', () => {
+      const params = new URLSearchParams(window.location.search);
+      const numbersJson = params.get('numbers');
+      const grid = document.getElementById('barcode-grid');
+
+      if (!numbersJson) return;
+
+      const numbers = JSON.parse(decodeURIComponent(numbersJson));
+
+      // Заполняем 40 ячеек (4x10)
+      for (let i = 0; i < 40; i++) {
+          const cell = document.createElement('div');
+          cell.className = 'barcode-cell';
+
+          const num = numbers[i] || ''; // Если кодов меньше 40, оставшиеся будут пустыми
+          const svg = num ? generateBarcodeSVG(num) : document.createElement('div');
+
+          const text = document.createElement('div');
+          text.className = 'barcode-text';
+          text.textContent = num;
+
+          cell.appendChild(svg);
+          cell.appendChild(text);
+          grid.appendChild(cell);
+      }
+  });
+
+  function toggleMenu() {
+      document.getElementById("sidebar").classList.toggle("collapsed");
+  }
+
+     function logout() {
+  // Очищаем все данные авторизации
+  localStorage.removeItem('institutionKey');
+  localStorage.removeItem('institutionName');
+
+  // Перенаправляем на страницу входа
+  window.location.href = 'login.html';
 }
 </script>
 </body>
