--- a/src/main/resources/static/auto-marking.html
+++ b/src/main/resources/static/auto-marking.html
@@ -43,11 +43,11 @@
                             </tr>
                             <tr>
                                 <td><label for="kod1">Начальный код:</label></td>
-                                <td><input type="text" id="kod1" name="kod1" maxlength="6"></td>
+                                <td><input type="text" id="kod1" name="kod1" maxlength="7"></td>
                             </tr>
                             <tr>
                                 <td><label for="kod2">Конечный код:</label></td>
-                                <td><input type="text" id="kod2" name="kod2" maxlength="6"></td>
+                                <td><input type="text" id="kod2" name="kod2" readonly> </td>
                             </tr>
                             <tr>
                                 <td><label for="kol">Количество штрих-кодов:</label></td>
@@ -55,12 +55,12 @@
                             </tr>
                             <tr>
                                 <td><label for="kol_str">Количество страниц:</label></td>
-                                <td><input type="text" id="kol_str" name="kol_str"></td>
+                                <td><input type="text" id="kol_str" name="kol_str" readonly></td>
                             </tr>
                         </table>
                         
                         <div class="auto-form-actions">
-                            <button type="button" onclick="refreshPage()" class="auto-form-button secondary">Обновить</button>
+                        <!--    <button type="button" onclick="refreshPage()" class="auto-form-button secondary">Обновить</button> -->
                             <button type="button" onclick="printBarcodes()" class="auto-form-button primary">Печать штрих-кодов</button>
                         </div>
                     </form>
@@ -68,6 +68,7 @@
             </div>
         </main>
     </div>
+
 
     <script src="theme-switcher.js"></script>
     <script>
@@ -93,23 +94,23 @@
     const defaultStart = '000001';
 
     kod1Field.value = lastEndCode
-        ? String(Number(lastEndCode) + 1).padStart(6, '0')
+        ? String(Number(lastEndCode) + 1).padStart(7, '0')
         : defaultStart;
 
     // Автоматический расчет
     const calculateFields = () => {
         const startNum = Number(kod1Field.value);
-        const count = 28; // Фиксированное количество кодов
+        const count = 40; // Фиксированное количество кодов
         const endNum = startNum + count - 1;
 
-        kod2Field.value = String(endNum).padStart(6, '0');
+        kod2Field.value = String(endNum).padStart(7, '0');
         kolField.value = count;
         kolStrField.value = '1'; // Фиксированно 1 страница
     };
 
     // Обработчики событий
     kod1Field.addEventListener('input', (e) => {
-        e.target.value = e.target.value.replace(/\D/g, '').slice(0, 6);
+        e.target.value = e.target.value.replace(/\D/g, '').slice(0, 7);
         calculateFields();
     });
 
@@ -124,7 +125,7 @@
 function printBarcodes() {
     const institutionKey = localStorage.getItem('institutionKey');
     const startCode = document.getElementById('kod1').value;
-    const count = 27;
+    const count = 40;
 
     // Генерируем номера для печати
     const numbers = [];
