--- a/src/main/resources/static/landing-page.html
+++ b/src/main/resources/static/landing-page.html
@@ -6,8 +6,8 @@
     <title>Главная - Сервис штрихкодирования</title>
     <link rel="stylesheet" href="styles.css" id="main-style">
     <link rel="stylesheet" href="light-styles.css" id="light-theme" disabled>
-    <link rel="stylesheet" href="high-contrast.css">
-    <link rel="stylesheet" href="grayscale.css">
+    <link rel="stylesheet" href="grayscale.css" id="grayscale-style" disabled>
+    <link rel="stylesheet" href="high-contrast.css" id="high-contrast-style" disabled>
     <style>
         /* Добавляем стили для кнопки авторизации */
         .auth-button {
