--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,20 +6,14 @@
     <title>Главная - Сервис штрихкодирования</title>
     <link rel="stylesheet" href="styles.css" id="main-style">
     <link rel="stylesheet" href="light-styles.css" id="light-theme" disabled>
-	  <link rel="stylesheet" href="high-contrast.css">
-  <link rel="stylesheet" href="grayscale.css">
+    <link rel="stylesheet" href="grayscale.css" id="grayscale-style" disabled>
+    <link rel="stylesheet" href="high-contrast.css" id="high-contrast-style" disabled>
 </head>
 <body>
     <div class="container">
         <nav class="sidebar" id="sidebar">
             <ul class="menu">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="marking.html">Маркировка</a></li>
-                <li><a href="inventory.html">Инвентаризация</a></li>
-                <li><a href="personnel.html">Персоналии</a></li>
-				<li><a href="setting.html">Настройки</a></li>
-                <li><a href="#" onclick="logout()">Выход</a></li>
-
+                <!-- Меню будет заполнено через JavaScript -->
             </ul>
         </nav>
         
@@ -104,7 +98,8 @@
         </main>
     </div>
 
-    <script src="theme-switcher.js"></script>
+    <script src="menu.js"></script>
+    <script src="setting.js"></script>
     <script>
 
         document.addEventListener('DOMContentLoaded', () => {
@@ -138,10 +133,6 @@
       localStorage.setItem('appSettings', JSON.stringify(settings));
     }
 
-    function toggleMenu() {
-      const sidebar = document.getElementById('sidebar');
-      sidebar.classList.toggle('collapsed');
-    }
 
     // Загрузка сохраненных настроек
     function loadSettings() {
@@ -213,6 +204,8 @@
     // Перенаправляем на страницу входа
     window.location.href = 'login.html';
 }
+
+
 
     </script>
 </body>
