--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -6,19 +6,14 @@
     <title>Регистрация пользователя - OPAC-Global</title>
     <link rel="stylesheet" href="styles.css" id="main-style">
     <link rel="stylesheet" href="light-styles.css" id="light-theme" disabled>
-    <link rel="stylesheet" href="high-contrast.css">
-    <link rel="stylesheet" href="grayscale.css">
+    <link rel="stylesheet" href="grayscale.css" id="grayscale-style" disabled>
+    <link rel="stylesheet" href="high-contrast.css" id="high-contrast-style" disabled>
 </head>
 <body>
 <div class="container">
     <nav class="sidebar" id="sidebar">
         <ul class="menu">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="marking.html">Маркировка</a></li>
-            <li><a href="inventory.html">Инвентаризация</a></li>
-            <li><a href="personnel.html">Персоналии</a></li>
-            <li><a href="setting.html">Настройки</a></li>
-            <li><a href="#" onclick="logout()">Выход</a></li>
+            <!-- Меню будет заполнено через JavaScript -->
         </ul>
     </nav>
 
@@ -52,6 +47,14 @@
                     <input type="password" id="password" name="password" required>
                 </div>
 
+                <div class="form-group" id="role-selector" style="display: none;">
+                    <label for="role">Роль пользователя:</label>
+                    <select id="role" name="role" required>
+                        <option value="USER">Пользователь</option>
+                        <option value="ADMIN">Администратор</option>
+                    </select>
+                </div>
+
                 <div class="form-actions">
                     <button type="submit" class="primary">Зарегистрировать</button>
                 </div>
@@ -60,15 +63,35 @@
     </main>
 </div>
 
-<script src="theme-switcher.js"></script>
+<script src="menu.js"></script>
+<script src="setting.js"></script>
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
-    const institutionKey = localStorage.getItem('institutionKey');
-    if (!institutionKey) {
-        window.location.href = 'login.html';
-        return;
-    }
-});
+    document.addEventListener('DOMContentLoaded', async () => {
+        const institutionKey = localStorage.getItem('institutionKey');
+        if (!institutionKey) {
+            window.location.href = 'login.html';
+            return;
+        }
+
+        // Проверяем роль текущего пользователя
+        try {
+            const response = await fetch(`/api/v1/institutions/${institutionKey}`, {
+                headers: {
+                    'Authorization': institutionKey
+                }
+            });
+
+            if (response.ok) {
+                const user = await response.json();
+                if (user.role === 'ADMIN') {
+                    document.getElementById('role-selector').style.display = 'block';
+                }
+            }
+        } catch (error) {
+            console.error('Ошибка при проверке роли:', error);
+        }
+    });
+
     document.getElementById('register-form').addEventListener('submit', async function(e) {
         e.preventDefault();
 
@@ -76,38 +99,42 @@
         const key = document.getElementById('key').value;
         const login = document.getElementById('login').value;
         const password = document.getElementById('password').value;
+        const role = document.getElementById('role')?.value || 'USER';
+        const authToken = localStorage.getItem('institutionKey');
 
         try {
             const institution = {
                 key: key,
                 name: name,
                 login: login,
-                password: password
+                password: password,
+                role: role
             };
 
             const response = await fetch('/api/v1/institutions/save_institution', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
+                    'Authorization': authToken
                 },
                 body: JSON.stringify(institution)
             });
 
             if (!response.ok) {
                 const errorData = await response.json();
-
-                // Обработка различных статусов ошибок
                 let errorMessage = 'Произошла ошибка при регистрации';
 
                 if (response.status === 400) {
                     errorMessage = 'Неверно заполнены данные. Проверьте все поля.';
+                } else if (response.status === 403) {
+                    errorMessage = 'Недостаточно прав для создания пользователя';
+                    window.location.href = 'index.html';
                 } else if (response.status === 409) {
                     errorMessage = 'Пользователь с таким логином или идентификатором уже существует';
                 } else if (response.status === 500) {
                     errorMessage = 'Ошибка на сервере. Пожалуйста, попробуйте позже.';
                 }
 
-                // Если сервер вернул конкретное сообщение об ошибке
                 if (errorData.message) {
                     errorMessage += `\nДетали: ${errorData.message}`;
                 }
@@ -116,24 +143,74 @@
             }
 
             const result = await response.json();
-            alert('Регистрация прошла успешно! Теперь вы можете войти в систему.');
-            window.location.href = 'index.html';
+            alert('Регистрация прошла успешно!');
+
+            // Если регистрирует администратор - остаемся на странице
+            if (role === 'ADMIN') {
+                document.getElementById('register-form').reset();
+            } else {
+                window.location.href = 'login.html';
+            }
         } catch (error) {
             console.error('Ошибка при регистрации:', error);
-
-            // Показываем пользователю понятное сообщение
             alert(error.message || 'Произошла неизвестная ошибка при регистрации. Пожалуйста, попробуйте еще раз.');
         }
     });
 
-       function logout() {
-    // Очищаем все данные авторизации
-    localStorage.removeItem('institutionKey');
-    localStorage.removeItem('institutionName');
+    function logout() {
+        localStorage.removeItem('institutionKey');
+        localStorage.removeItem('institutionName');
+        window.location.href = 'login.html';
+    }
 
-    // Перенаправляем на страницу входа
-    window.location.href = 'login.html';
-}
+    function toggleMenu() {
+        const sidebar = document.getElementById('sidebar');
+        sidebar.classList.toggle('active');
+    }
+
+
 </script>
+
+<style>
+    #role-selector {
+    margin: 15px 0;
+}
+
+#role {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.sidebar {
+    transition: transform 0.3s ease;
+}
+
+.sidebar.active {
+    transform: translateX(0);
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        transform: translateX(-100%);
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        z-index: 1000;
+        background: white;
+    }
+
+    .menu-button {
+        display: block;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 1100;
+    }
+}
+</style>
 </body>
 </html>
